# quanta_maths

./: .env  .gitignore  MathsMechInterp.pyproj  QuantaProjects.sln  README.md  filter.md  mixed_model.md  pca.md  pyproject.toml  quanta_addition_subtraction.pyproj  requirements.txt  setup.py
MathsCatGen/: __init__.py  maths_catgen.py
MathsMechInterp/: __init__.py  maths_complexity.py  maths_config.py  maths_data_generator.py  maths_pca.py  maths_search_add.py  maths_search_mix.py  maths_search_sub.py  maths_utilities.py
MathsMechInterp/MathsTestQuestions/: __init__.py  manual_test_questions_generator.py  test_questions_checker.py  tricase_test_questions_generator.py
Tests/: tests_maths.py  tests_sae.py  tests_suite.py
maths_tools/: __init__.py  maths_complexity.py  maths_config.py  maths_data_generator.py  maths_pca.py  maths_search_add.py  maths_search_mix.py  maths_search_sub.py
maths_tools/maths_test_questions/: manual_test_questions_generator.py  test_questions_checker.py  tricase_test_questions_generator.py
notebooks/: QCatGen.ipynb  QCatGen_Models.ipynb  QCatGen_Run.ipynb  QMAlgorithm.ipynb  QMAnalyse.ipynb  QMSAE.ipynb  QMScan.ipynb  QMTrainingGraphs.ipynb  QuantaMathsAlgorithm.ipynb  QuantaMathsAnalyse.ipynb  QuantaMathsOOB.ipynb  QuantaMathsSAE.ipynb  QuantaMathsScan.ipynb  QuantaMathsTrain.ipynb  QuantaMathsTrainingGraphs.ipynb  VerifiedArithmeticAlgorithm.ipynb  VerifiedArithmeticAnalyse.ipynb  VerifiedArithmeticSAE.ipynb  VerifiedArithmeticTrain.ipynb  VerifiedArithmeticTrainingGraphs.ipynb
