[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "MathsMechInterp"
version = "1.0.0"
description = "Maths Mechanistic Interpretability tools"
authors = [
    {name = "Philip Quirke et al", email = "philipquirkenz@gmail.com"}
]
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]
dependencies = [
    "numpy>=1.18.1",
    "transformer_lens",
    "QuantaMechInterp>=1.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["MathsMechInterp*", "MathsCatGen*"]
namespaces = true
